<resources>
    <string name="app_name">Task manager</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sing_up_logo">Sing up application</string>
    <string name="back">Back</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sing_out">Sing out</string>
    <string name="all_tasks">All tasks</string>
    <string name="new_task">New Task</string>
    <string name="my_tasks">My Tasks</string>
    <string name="back_button">Back</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="responsible_person_field">Responsible person</string>
    <string name="type_field">Type</string>
    <string name="input_document">Input Document</string>
    <string name="number">Number</string>
    <string name="date">Date</string>
    <string name="content">Content</string>
    <string name="outcome_document">Outcome Document</string>
    <string name="address">Address</string>
    <string name="status">Status</string>
    <string name="all_tasks_title">All Tasks</string>
    <string name="rb_internal">Internal</string>
    <string name="rb_external">External</string>
    <string name="rb_initiative">Initiative</string>
    <string name="description">Description</string>
    <string name="logo">logo</string>
    <string name="user_name">User name</string>
</resources>