<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sign_up_background"
    android:background="@drawable/gradient_animation">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:shadowColor="@color/gradientEnd"
        android:shadowRadius="1"
        android:text="@string/sing_up_logo"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/ed_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/drawable_textfield"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white_semitransparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_password"
        app:layout_constraintVertical_bias="0.035" />

    <EditText
        android:id="@+id/ed_sign_up_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/drawable_textfield"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/user_name"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white_semitransparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.16" />

    <EditText
        android:id="@+id/ed_sign_up_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/drawable_textfield"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white_semitransparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.241" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/drawable_textfield"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white_semitransparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_sign_up_email"
        app:layout_constraintVertical_bias="0.033" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/drawable_button"
        android:fontFamily="sans-serif-medium"
        android:onClick="onClickSignUp"
        android:text="@string/sign_up"
        android:textColor="@color/gradientEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_confirm_password"
        app:layout_constraintVertical_bias="0.75" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/drawable_button"
        android:textColor="@color/gradientEnd"
        android:fontFamily="sans-serif-medium"
        android:text="@string/back"
        android:onClick="onClickBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>