<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp"
    app:cardBackgroundColor="@color/white">

    <RadioGroup
        android:id="@+id/rgTypeWindow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <RadioButton
            android:id="@+id/rbInternal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="@color/gradientEnd"
            android:paddingHorizontal="20dp"
            android:text="@string/rb_internal"
            android:buttonTint="@color/gradientEnd"/>

        <RadioButton
            android:id="@+id/rbExternal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="@color/gradientEnd"
            android:buttonTint="@color/gradientEnd"
            android:paddingHorizontal="20dp"
            android:text="@string/rb_external"/>

        <RadioButton
            android:id="@+id/rbInitiative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="@color/gradientEnd"
            android:buttonTint="@color/gradientEnd"
            android:paddingHorizontal="20dp"
            android:text="@string/rb_initiative"/>


    </RadioGroup>

</androidx.cardview.widget.CardView>