<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/amend_or_create_task_background"
    android:background="@drawable/gradient_animation">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:shadowColor="@color/gradientEnd"
        android:shadowRadius="1"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/responsible_person_field"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:shadowColor="@color/gradientEnd"
                    android:shadowRadius="1"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/etUser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:shadowColor="@color/gradientEnd"
                    android:shadowRadius="1"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_document"
                android:fontFamily="sans-serif-medium"
                android:textSize="20sp"
                android:textStyle="normal"
                android:shadowColor="@color/gradientEnd"
                android:shadowRadius="1"
                android:textColor="@color/white"
                android:layout_marginVertical="5dp"
                android:textAlignment="center"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/type_field"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:shadowColor="@color/gradientEnd"
                    android:shadowRadius="1"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/etInputDocumentType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:shadowColor="@color/gradientEnd"
                    android:shadowRadius="1"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/number"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:shadowColor="@color/gradientEnd"
                    android:shadowRadius="1"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/etInputDocumentNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:shadowColor="@color/gradientEnd"
                    android:shadowRadius="1"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:shadowColor="@color/gradientEnd"
                    android:shadowRadius="1"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/etInputDocumentDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:shadowColor="@color/gradientEnd"
                    android:shadowRadius="1"
                    android:inputType="date"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/content"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:shadowColor="@color/gradientEnd"
                    android:shadowRadius="1"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/etInputDocumentContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:shadowColor="@color/gradientEnd"
                    android:shadowRadius="1"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/outcome_document"
                android:fontFamily="sans-serif-medium"
                android:textSize="20sp"
                android:textStyle="normal"
                android:shadowColor="@color/gradientEnd"
                android:shadowRadius="1"
                android:textColor="@color/white"
                android:layout_marginVertical="5dp"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/type_field"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:shadowColor="@color/gradientEnd"
                    android:shadowRadius="1"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/etOutcomeDocumentType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:shadowColor="@color/gradientEnd"
                    android:shadowRadius="1"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/number"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:shadowColor="@color/gradientEnd"
                    android:shadowRadius="1"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/etOutcomeDocumentNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:shadowColor="@color/gradientEnd"
                    android:shadowRadius="1"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:shadowColor="@color/gradientEnd"
                    android:shadowRadius="1"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/etOutcomeDocumentDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:shadowColor="@color/gradientEnd"
                    android:shadowRadius="1"
                    android:inputType="date"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/content"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:shadowColor="@color/gradientEnd"
                    android:shadowRadius="1"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/etOutcomeDocumentContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:shadowColor="@color/gradientEnd"
                    android:shadowRadius="1"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/address"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:shadowColor="@color/gradientEnd"
                    android:shadowRadius="1"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/etOutcomeDocumentAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:shadowColor="@color/gradientEnd"
                    android:shadowRadius="1"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/status"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:shadowColor="@color/gradientEnd"
                    android:shadowRadius="1"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/etStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:shadowColor="@color/gradientEnd"
                    android:shadowRadius="1"
                    android:textColor="@color/white"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/back_button"
            android:background="@drawable/drawable_button"
            android:textColor="@color/gradientEnd"
            android:fontFamily="sans-serif-medium"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:onClick="onClickBackToMain"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_button"
            android:background="@drawable/drawable_button"
            android:textColor="@color/gradientEnd"
            android:fontFamily="sans-serif-medium"
            android:layout_marginRight="5dp"
            android:layout_marginVertical="5dp"
            android:onClick="onClickSave"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClickDelete"
            android:text="@string/delete_button"
            android:background="@drawable/drawable_button"
            android:textColor="@color/gradientEnd"
            android:fontFamily="sans-serif-medium"
            android:layout_marginRight="5dp"
            android:layout_marginVertical="5dp"/>

    </LinearLayout>

</LinearLayout>